--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "fawn": "^2.1.5",
     "helmet": "^3.22.0",
     "joi": "^14.3.1",
+    "joi-objectid": "^3.0.1",
     "mongoose": "^5.0.2",
     "morgan": "^1.10.0"
   }
