--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "helmet": "^3.22.0",
     "joi": "^14.3.1",
     "joi-objectid": "^3.0.1",
+    "lodash": "^4.17.15",
     "mongoose": "^5.0.2",
     "morgan": "^1.10.0"
   }
