--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^4.0.1",
+    "config": "^1.31.0",
     "express": "^4.17.1",
     "fawn": "^2.1.5",
     "helmet": "^3.22.0",
     "joi": "^14.3.1",
     "joi-objectid": "^3.0.1",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "mongoose": "^5.0.2",
     "morgan": "^1.10.0"
